typecheck/tests/micro/bad/if_array.c

void main(void)
{
	int a[12];
	if(a)
	{}
return;
}
